# Memento

./: README.md  app.memento.memento.json  io.github.ans_ibrahim.Memento.Devel.json  io.github.ans_ibrahim.Memento.json  meson.build
data/: app.memento.memento.desktop.in  app.memento.memento.gschema.xml  app.memento.memento.metainfo.xml.in  app.memento.memento.service.in  io.github.ans_ibrahim.Memento.Devel.gschema.xml  io.github.ans_ibrahim.Memento.Devel.service.in  io.github.ans_ibrahim.Memento.desktop.in  io.github.ans_ibrahim.Memento.gschema.xml  io.github.ans_ibrahim.Memento.metainfo.xml.in  io.github.ans_ibrahim.Memento.service.in  meson.build
po/: LINGUAS  POTFILES.in  fr.po  memento.pot  meson.build  pl.po  pt_BR.po  ur.po  (+1 more)
src/: app.memento.memento.src.gresource.xml  io.github.ans_ibrahim.Memento.data.gresource.xml  io.github.ans_ibrahim.Memento.src.gresource.xml  main.js  meson.build  shortcuts-dialog.ui  style.css  window.js  window.ui
src/dialogs/: movie-detail-dialog.js  movie-detail-dialog.ui  places-dialog.js  places-dialog.ui  search-dialog.js  search-dialog.ui
src/pages/: movie-detail-page.js  movie-detail-page.ui  person-page.js  person-page.ui  plays-page.js  plays-page.ui  preferences-page.js  preferences-page.ui  top-people-page.js  top-people-page.ui  tv-detail-page.js  tv-detail-page.ui  watchlist-page.js  watchlist-page.ui
src/services/: imdb-service.js  tmdb-service.js
src/utils/: database-utils.js  image-utils.js  ui-utils.js
src/widgets/: movie-card.js  person-stat-card.js  play-card.js  play-entry.js  play-entry.ui  stat-card.js
(+1 files in other folders)
